# Sastasha-bot

./: .gitignore  README.md  birthday.py  main.py  timer.py
Rust/: Cargo.toml  get_rt.rs  main.rs
Rust/Birthdays/: Cargo.toml
Rust/Birthdays/src/: main.rs
Rust/MainBot/: Cargo.toml
Rust/MainBot/src/: main.rs
Rust/Timer/: .gitignore  Cargo.toml
Rust/Timer/src/: get_rt.rs  main.rs
Rust/tester/: Cargo.toml
Rust/tester/src/: get_rt.rs  main.rs
