[package]
name = "discord"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
poise = "0.6.1"
regex = "1.11.0"
tokio = {version = "1.40.0", features = ["rt-multi-thread"] }
async-trait = { version = "0.1.48", default-features = false } # various traits
chrono = "0.4.38"
csv = "1.3.0"

